@@ -16,7 +16,6 @@
 package io.datarouter.gcp.spanner.op.read;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import com.google.cloud.spanner.DatabaseClient;
@@ -62,7 +61,7 @@ extends SpannerBaseReadOp<D>{
 	@Override
 	public List<D> wrappedCall(){
 		if(keys.isEmpty()){
-			return Collections.emptyList();
+			return List.of();
 		}
 		return callClient(fieldInfo.getFieldColumnNames(), fieldInfo.getFields(), fieldInfo.getDatabeanSupplier());
 	}
