@@ -16,7 +16,6 @@
 package io.datarouter.client.redis.node;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -89,7 +88,7 @@ implements MapStorageReader<PK,D>, TallyStorageReader<PK,D>{
 	@Override
 	public List<D> getMulti(Collection<PK> keys, Config config){
 		if(keys == null || keys.isEmpty()){
-			return Collections.emptyList();
+			return List.of();
 		}
 		try(Jedis client = redisClientManager.getJedis(clientId).getResource()){
 			return client.mget(buildRedisKeys(keys).toArray(new String[keys.size()])).stream()
@@ -103,7 +102,7 @@ implements MapStorageReader<PK,D>, TallyStorageReader<PK,D>{
 	@Override
 	public List<PK> getKeys(Collection<PK> keys, Config config){
 		if(keys == null || keys.isEmpty()){
-			return Collections.emptyList();
+			return List.of();
 		}
 		return Scanner.of(getMulti(keys, config))
 				.map(Databean::getKey)
